# Deep-Learning-For-Games

./: .gitignore  ConvTest.py  README.md  mnist_autoencoder.py  pyproject.toml  test.py
exercises/: chapter_1_exercises.txt
