[tool.poetry]
name = "deep-learning-for-games"
version = "0.1.0"
description = "Exercises and Projects from the Deep-Learning-For-Games book"
authors = ["Colin Grebenstein"]
license = "GPL v3"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "^2.7.0"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
tensorboard = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
